# Xpose

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
agent-docs/: 00-INDEX.md  adreno-840-device-profile.md  android-build.md  android-device-testing.md  architecture.md  environment.md  exit-teardown-fix.md  gguf.md  llm-inference.md  llm-performance.md  mali-coherency-fix.md  mali-g57-device-profile.md  repo-layout.md  vulkore-core.md  vulkore-program-launch.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: llm_sampling.spv  llm_transformer.spv
android/app/src/main/cpp/: CMakeLists.txt  llm_jni.cpp
android/app/src/main/java/dev/vulkore/trainer/: ChatScreen.kt  MainActivity.kt  VulkoreLlm.kt
android/app/src/main/res/values/: themes.xml
bench/: README.md  bench.cpp
bench/kernels/: bench.cl  bench.spv
benchmarks/: CMakeLists.txt  README.md  saxpy_raw_vulkan.cpp  saxpy_vulkore.cpp
examples/llm/: attn_bench.cpp  bench.cpp  decode.cpp  decode.hpp  dispatch_probe.cpp  kernel_tests.cpp  matvec_bench.cpp  phone_validation.cpp  quant_repack.cpp  quant_repack.hpp  quant_test.cpp  sampling_test.cpp
examples/llm/model/: CMakeLists.txt  gguf.cpp  gguf.hpp  inspect.cpp  selftest.cpp  tokenizer.cpp  tokenizer.hpp
include/vulkore/: buffer.hpp  check.hpp  context.hpp  launch.hpp  program.hpp  sync.hpp  vulkore.hpp
include/xpose/: buffer.hpp  check.hpp  context.hpp  launch.hpp  program.hpp  sync.hpp  xpose.hpp
kernels/: llm.cl  llm.spv  llm_matvec.cl  llm_matvec.spv  llm_quant.cl  llm_quant.spv  llm_sampling.cl  llm_transformer.cl
scripts/: run-android.sh
src/: buffer.cpp  context.cpp  launch.cpp  program.cpp  sync.cpp  vma_impl.cpp
tests/: CMakeLists.txt  batch_test.cpp  buffer_test.cpp  check_test.cpp  context_test.cpp  kernel_features_test.cpp  launch_test.cpp  program_error_test.cpp  program_test.cpp  sync_test.cpp  test_main.cpp
tests/kernels/: README.md  compare_fp.cl  compare_fp.spv  many_pod.cl  many_pod.spv  regenerate.py  reqd_wgsize.cl  reqd_wgsize.spv  saxpy.cl  saxpy.spv  scale_inplace.cl  scale_inplace.spv  transpose_2d.cl  transpose_2d.spv  two_kernels.cl  two_kernels.spv  vec_add.cl  vec_add.spv
